force-app/main/default/objects/Sales_Area__mdt/Sales_Area__mdt.object-meta.xml
<CustomObject>
    <description>This stores the sales area details which need would be defaulted when an Account is being sent to ERP</description>
    <label>Sales Area</label>
    <pluralLabel>Sales Areas</pluralLabel>
</CustomObject>