force-app/main/default/objects/Sales_Area__mdt/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>Field to store Company Code</description>
    <label>Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>