force-app/main/default/objects/Sales_Area__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Field to store Country Code</description>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>