force-app/main/default/objects/Sales_Area__mdt/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <description>Field to store Distribution Channel</description>
    <label>Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>