force-app/main/default/objects/Sales_Area__mdt/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Field to store Division</description>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>