force-app/main/default/objects/Sales_Area__mdt/fields/Transportation_Zone__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Zone__c</fullName>
    <description>Field to store Transportation Zone</description>
    <label>Transportation Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>